fixed found in css overlap on small devices

--- a/app/assets/stylesheets/customOverrides/search_result.scss
+++ b/app/assets/stylesheets/customOverrides/search_result.scss
@@ -90,6 +90,7 @@ DEFAULT MOBILE STYLING
     flex-wrap: wrap;
     margin-top: -21px;
     margin-left: 74px;
+    max-width: 250px;
   }
 
   .document-metadata {
@@ -185,6 +186,7 @@ DEFAULT MOBILE STYLING
       flex-wrap: wrap;
       margin-top: -21px;
       margin-left: 74px;
+      max-width: 285px;
     }
 
     .document-metadata {
@@ -267,6 +269,7 @@ DEFAULT MOBILE STYLING
       flex-wrap: wrap;
       margin-top: -21px;
       margin-left: 74px;
+      max-width: 325px;
     }
 
     .document-metadata {
